force-app/main/default/objects/Account/fields/Future_Date__c.field-meta.xml
<CustomField>
    <fullName>Future_Date__c</fullName>
    <formula>Today() + 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Date</label>
    <type>Date</type>
</CustomField>