force-app/main/default/objects/Account/fields/Soma_das_oportunidades__c.field-meta.xml
<CustomField>
    <fullName>Soma_das_oportunidades__c</fullName>
    <label>Soma das oportunidades</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>