force-app/main/default/objects/Account/recordTypes/Partner_Account.recordType-meta.xml
<RecordType>
    <fullName>Partner_Account</fullName>
    <active>true</active>
    <description>For consulting partners (Para parceiros de consultoria)</description>
    <label>Partner Account</label>
</RecordType>